Simplify the compaction replay test helpers
Reuse of the existing harness:
- StreamsGroupTestUtil.staticHeartbeat/staticJoinHeartbeat now build the
  streams join, leave and reconcile requests.
- Remove follow SyncGroup block, default to SyncGroupRequestBuilder

Deduplication:
- Add leaveStreamsMember, joinConsumerMember, joinStreamsMember and
  sleepCapturing, and fold the two reconciliation loops into a single
  driver.

Compaction model:
- compact() returns a CompactedVariant carrying the records, the cleaned
  window and the removed positions.
- Use a single GroupCoordinatorMetrics instance.
- Pass withLogContext to the OffsetMetadataManager.Builder, as production
  does.

The captured logs are unchanged: both scenarios still produce exactly the
same records, batches and compactable positions as before (69/30/52 for
the consumer scenario, 51/26/42 for the streams one). Verified by
reverting each fix and re-running: KAFKA-20254 fails the streams
scenario, KAFKA-19862 fails both.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>